cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(read_data)
find_package(Eigen3)
include_directories(${EIGEN3_INCLUDE_DIR})
link_directories(${EIGEN3_LIBRARY_DIRS})
add_definitions(${EIGEN3_DEFINITIONS})
add_executable(read_data read_data.cpp)
target_link_libraries(read_data ${EIGEN3_LIBRARIES})
